Fix for bug #12839 (Endian support is absurd)